thread.c: fix some mutexes remaining locked after forking

* thread.c (terminate_atfork_i): fix locking mutexes not unlocked in
  forks when not tracked in thread.  [ruby-core:55102] [Bug #8433]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@43148 b2dd03c8-39d4-4d8f-98ff-823fe69b080e